--- a/index.html
+++ b/index.html
@@ -13,58 +13,176 @@
 <body>
     <main>
         <div class="baner">
+
             <header>
-                <div class="contaner-grid">
-                    <img src="./img/Vector.svg" alt="baner">
+                <div class="espaco-laterais">
+
+                    <img src="./img/logo (2).svg" alt="logo">
 
                     <nav id="menu" class="menu">
 
                         <div class="iconesInicio">
 
-                            <svg xmlns="http://www.w3.org/2000/svg" 
-                                fill="currentColor" class="bi bi-backpack" viewBox="0 0 16 16">
-                                <path
-                                    d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z" />
-                                <path
-                                    d="M6 2.341V2a2 2 0 1 1 4 0v.341c2.33.824 4 3.047 4 5.659v5.5a2.5 2.5 0 0 1-2.5 2.5h-7A2.5 2.5 0 0 1 2 13.5V8a6 6 0 0 1 4-5.659M7 2v.083a6 6 0 0 1 2 0V2a1 1 0 0 0-2 0m1 1a5 5 0 0 0-5 5v5.5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5V8a5 5 0 0 0-5-5" />
-                            </svg>
                             <a href="">Pacotes</a>
                         </div>
 
                         <div class="iconesInicio">
 
-                        
-
+                            <a href="">Informação</a>
                         </div>
-                        <div class="iconesInicio"></div>
-                        <div class="iconesInicio"></div>
 
+                        <div class="iconesInicio">
 
-                        <a href="">Pacotes</a>
-                        <a href="">Viagens</a>
-                        <a href="">Informação</a>
-                        <a href="">Hoteis</a>
+                            <a href="">Viagens</a>
+                        </div>
+
+                        <div>
+                            <a href="">Hoteis</a>
+                        </div>
                     </nav>
+
+
+
+
+
+
+
 
                 </div>
             </header>
+
+        </div>
+        </header>
         </div>
 
 
-        <section id="sobre" class="container-grid">
+
+        <section id="sobre" class="espaco-laterais">
             <img src="./img/ilha.jpg" alt="foto de uma ilha">
 
             <div class="conteudo-sobre">
                 <div class="titulo">
                     <h2>Sobre</h2><span>a nossa agência</span>
                 </div>
-                <p>sA Greenway é uma agência de viagens focada em turismo sustentável para empresas,
+                <p>A Greenway é uma agência de viagens focada em turismo sustentável para empresas,
                     oferecendo pacotes personalizados que combinam melhores práticas ambientais e tecnologia
                     de ponta. Nossa identidade visual, inspirada na janela de um avião com foco em plantas
                     verdes, representa nossa visão de um futuro onde turismo e natureza coexistem em
                     harmonia, buscando sempre um horizonte mais verde e consciente.</p>
             </div>
         </section>
+
+        <section>
+
+
+
+
+
+            <head>
+                <meta charset="UTF-8" />
+                <title>Cards de Viagem</title>
+                <link rel="stylesheet" href="styles.css" />
+            </head>
+
+
+            <h2>Pacotes</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./img/img 1 pacotes.png" alt="Canadá">
+                    <div class="card-text">
+                        <h3>Viagem para CANADÁ</h3>
+                        <p>com o melhor preços</p>
+                        <span>ATÉ 12x sem juros</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/image 4 portu.png" alt="Portugal">
+                    <div class="card-text">
+                        <h3>Viagem para PORTUGAL</h3>
+                        <p>com o menor preço</p>
+                        <span>ATÉ 12x sem juros</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/praia.png" alt="Praia">
+                    <div class="card-text">
+                        <h3>Viagem para PRAIA</h3>
+                        <p>com o melhor preço</p>
+                        <span>ATÉ 12x sem juros</span>
+                    </div>
+                </div>
+            </div>
+
+            <h2>Hotéis</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./img/image 3.png" alt="Fernando de Noronha">
+                    <div class="card-text">
+                        <h3>Fernando de Noronha</h3>
+                        <p>3.743 Hotéis</p>
+                        <span>R$ 353 Em Média</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/foto portugal predio.jpg" alt="Portugal">
+                    <div class="card-text">
+                        <h3>Portugal</h3>
+                        <p>1.007 Hotéis</p>
+                        <span>R$ 632 Em Média</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/foto rio nova.webp" alt="Rio de Janeiro">
+                    <div class="card-text">
+                        <h3>Rio de Janeiro</h3>
+                        <p>4.455 Hotéis</p>
+                        <span>R$ 465 Em Média</span>
+                    </div>
+                </div>
+            </div>
+
+            <section class="newsletter" aria-label="Formulário ">
+                <h3>Cadastre-se AQUI 👇🏻</h3>
+                <form action="#" method="post" class="newsletter-form" novalidate>
+                    <label for="name">E-mail:  </label>
+                    <input type="text" id="name" name="name" required aria-required="" placeholder="Seu e-mail " />
+                    <label for="email">Senha: </label>
+                    <input type="email" id="email" name="email" required aria-required=""
+                        placeholder="Digite sua Senha" />
+                    <button type="submit">Enviar</button>
+                </form>
+            </section>
+
+            <head>
+                <meta charset="UTF-8" />
+                <title>Footer Greenway</title>
+                <link rel="stylesheet"
+                    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+                <link rel="stylesheet" href="styles.css" />
+
+
+                <footer class="footer">
+                    <div class="footer-logo">
+                        <img src="./img/logo (2).svg" alt="Greenway Logo">
+
+                    </div>
+                    <div class="footer-social">
+                        <div class="social-item">
+                            <i class="fab fa-instagram"></i>
+                            <span>Greenway.Turismo</span>
+                        </div>
+                        <div class="social-item">
+                            <i class="fab fa-tiktok"></i>
+                            <span>Greenway.Turismo</span>
+                        </div>
+                        <div class="social-item">
+                            <i class="fas fa-envelope"></i>
+                            <span>Greenway.Turismo@gmail.com</span>
+                        </div>
+                    </div>
+                </footer>
+            </head>
+            <section>
 
 
     </main>
